fix: Put overflow auto to DialogContainer

--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -6,12 +6,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  @include desktop {
-    overflow: hidden;
-  }
-  @include mobile {
-    overflow: auto;
-  }
+  overflow: auto;
 }
 
 .content {
